k8s-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
  namespace: microshop
  labels:
    app: microshop
    component: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microshop
      component: store
  template:
    metadata:
      labels:
        app: microshop
        component: store
    spec:
      containers:
      - name: store
        image: quay.io/microshop/store:latest
        ports:
        - containerPort: 8081
        resources:
          limits:
            memory: 512Mi
            cpu: 100m
          requests:
            memory: 256Mi
            cpu: 30m
---
apiVersion: v1
kind: Service
metadata:
  name: store
  namespace: microshop
  labels:
    app: microshop
    component: store
spec:
  ports:
    - port: 8080
      targetPort: 8081
  selector:
    app: microshop
    component: store
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store
  namespace: microshop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: store.dh4r4pvj.ga
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store
                port:
                  number: 8080
  tls:
  - hosts:
    - store.dh4r4pvj.ga
    secretName: store-cert
